cluster-talos/kubernetes/apps/ocis/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ocis
  labels:
    k10.kasten.io/backup: "true"
